# fastapi-pgvector-rag

./: .dockerignore  .env.example  .env.test.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 001_create_tables_and_vector_extension.py  002_add_chunks_retrieval_indexes.py  003_make_chunk_embedding_nullable.py
scripts/: verify_compose.sh
scripts/demo/: run_demo.py
scripts/docker/: 20-init-test-db.sh
src/rag_api/: __init__.py  main.py  worker.py
src/rag_api/api/: __init__.py  deps.py
src/rag_api/api/routers/: __init__.py
src/rag_api/api/v1/: routers.py
src/rag_api/core/: __init__.py  config.py  db.py  errors.py  logging.py
src/rag_api/models/: __init__.py  schema.py
src/rag_api/schemas/: __init__.py  api.py
src/rag_api/services/: __init__.py  chunking.py  generation.py  ollama_client.py  prompting.py  retrieval.py
src/rag_api/worker/: __init__.py  __main__.py  run.py
tests/: conftest.py  test_ask_endpoint.py  test_auth.py  test_chunking.py  test_config.py  test_db_engine.py  test_docker_notes.md  test_documents_create.py  test_documents_read.py  test_errors.py  test_generation.py  test_health.py  test_job_status.py  test_limits.py  test_logging.py  test_migrations.py  test_models_metadata.py  test_ollama_client.py  test_prompting.py  test_queries_api.py  test_query_logging.py  test_readme_exists.py  test_retrieval.py  test_schemas.py  test_smoke.py  test_startup_checks.py  test_worker_chunks.py  test_worker_claim.py  test_worker_embeddings.py
