[project]
name = "fastapi-pgvector-rag"
version = "0.1.0"
description = "FastAPI + pgvector RAG API skeleton."
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "pydantic-settings>=2.7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "respx>=0.21.0",
    "asgi-lifespan>=2.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
